--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-streamlit
-torch==2.0.1
-transformers==4.30.2
-huggingface_hub
-tokenizers==0.13.3
+torch==2.5.0
+transformers==4.41.2
 scikit-learn
+streamlit==1.45.1
